edit 00-04 Formatting and mkdocs.yml template

--- a/src/00-Preface/00-04-Formatting-Conventions.ipynb
+++ b/src/00-Preface/00-04-Formatting-Conventions.ipynb
@@ -22,9 +22,7 @@
     "\n",
     "Web address will be shown as:\n",
     "\n",
-    "<br>\n",
-    "\n",
-    " > [https://github.com/professorkazarinoff/Problem-Solving-with-Python](https://github.com/professorkazarinoff/Problem-Solving-with-Python)\n"
+    " > [https://github.com/professorkazarinoff/Problem-Solving-with-Python](https://github.com/professorkazarinoff/Problem-Solving-with-Python)"
    ]
   },
   {
@@ -35,9 +33,7 @@
     " \n",
     "Important terms and vocabulary are shown in _italic text_.\n",
     "\n",
-    "<br>\n",
-    "\n",
-    " > There is a difference between _local variables_ and _global variables_ in Python code.\n"
+    " > There is a difference between _local variables_ and _global variables_ in Python code."
    ]
   },
   {
@@ -48,9 +44,7 @@
     " \n",
     "File names are shown in **_bold and italic text_**.\n",
     "\n",
-    "<br>\n",
-    "\n",
-    " > After completing the code, save the file as **_hello.py_** in the current directory.\n"
+    " > After completing the code, save the file as **_hello.py_** in the current directory."
    ]
   },
   {
@@ -61,9 +55,7 @@
     " \n",
     "Module and Package names will be shown in **bold text**.\n",
     "\n",
-    "<br>\n",
-    " \n",
-    " > **NumPy** and **Matplotlib** are two useful packages for problem solvers.\n"
+    " > **NumPy** and **Matplotlib** are two useful packages for problem solvers."
    ]
   },
   {
@@ -148,9 +140,7 @@
     "\n",
     "Keystrokes directly entered by the keyboard or buttons that are indicated on programs or web pages are shown inside square brackets in ```[monospaced font]```.\n",
     "\n",
-    "<br>\n",
-    "\n",
-    " > To delete a line, use the ```[Backspace]``` key. To exit the shell, type ```[shift]+[c]```\n"
+    " > To delete a line, use the ```[Backspace]``` key. To exit the shell, type ```[Ctrl] + [c]```"
    ]
   }
  ],
