add requirements-pdf.txt to templates/latex compiled .tex on windows, set toc color for windows use

--- a/templates/latex/copywrite_page.tex
+++ b/templates/latex/copywrite_page.tex
@@ -30,3 +30,4 @@ New end of chapter questions: Arrays and Matricies chapter, Loops chapter \\
 
 2020-08-23 3.8.3 Edition \\
 Revision of Orientation chapter: Images and text for Python 3.8 installation \\
+Python 3.8.3: All code in text runs on Python 3.8.3 \\
