add ch3 Python REPL change name of .tex file to include title and date, pdf builds on linux, website formatting needs work

--- a/src/10-Symbolic-Math/10-01-SymPy.ipynb
+++ b/src/10-Symbolic-Math/10-01-SymPy.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SymPy [sympy.org](https://www.sympy.org/) is a Python library for _symbolic math_.  \n",
+    "SymPy [(sympy.org)](https://www.sympy.org/) is a Python library for _symbolic math_.  \n",
     "\n",
     "In symbolic math, symbols are used to represent mathematical expressions. An example of a symbolic math expression is below.\n",
     "\n",
