typo edits to Ch4 Review Questions

--- a/src/04-Data-Types-and-Variables/04-08-Review-Questions.ipynb
+++ b/src/04-Data-Types-and-Variables/04-08-Review-Questions.ipynb
@@ -122,7 +122,7 @@
     " \n",
     " (c) Explain why the output from (a) was different from the output of (b)\n",
     " \n",
-    " (d) Multiply the string $8$ and the string $5$ with the multiplication operator ```*```.  Compare the output to multiplying the integers $8$ and the integer $5$. Why is the output different?\n",
+    " (d) Multiply the string $8$ and the integer $5$ with the multiplication operator ```*```.  Compare the output to multiplying the integers $8$ and the integer $5$. Why is the output different?\n",
     "\n",
     "Q03.33 Complete the following index and slicing operations after ```word = 'Problem'``` is defined.\n",
     "\n",
@@ -210,11 +210,11 @@
     "\n",
     "Q04.62 Create a dictionary ```numbers = {'one':1, 'two':2, 'three':3}```. Pull out the number ```2``` by calling the key ```'two'```.\n",
     "\n",
-    "Q04.63 Create a dictionary ```colors = {'red':'\t#FF0000', 'green':'#008000', 'blue':'#0000FF'}```. Pull out all the keys and add them to a list called ```colors_list``` with the ```.keys()``` method.\n",
+    "Q04.63 Create a dictionary ```colors = {'red':'#FF0000', 'green':'#008000', 'blue':'#0000FF'}```. Pull out all the keys and add them to a list called ```colors_list``` with the ```.keys()``` method.\n",
     "\n",
-    "Q04.64 Create a dictionary ```colors = {'red':'\t#FF0000', 'green':'#008000', 'blue':'#0000FF'}```. Pull out all the values and add them to a list called ```colors_hex``` with the ```.values()``` method.\n",
+    "Q04.64 Create a dictionary ```colors = {'red':'#FF0000', 'green':'#008000', 'blue':'#0000FF'}```. Pull out all the values and add them to a list called ```colors_hex``` with the ```.values()``` method.\n",
     "\n",
-    "Q04.65 Create a dictionary ```colors = {'red':'\t#FF0000', 'green':'#008000', 'blue':'#0000FF'}```. Pull out all the items from the dictionary and add them to a list called ```color_items``` with the ```.items()``` method.\n",
+    "Q04.65 Create a dictionary ```colors = {'red':'#FF0000', 'green':'#008000', 'blue':'#0000FF'}```. Pull out all the items from the dictionary and add them to a list called ```color_items``` with the ```.items()``` method.\n",
     "\n",
     "Q04.66 Create a dictionary ```groups = {'solo':1, 'duo':2}```. Add the key ```'trio'``` and the corresponding value ```3```.\n",
     "\n",
@@ -315,8 +315,8 @@
     "Q04.87 Run the following lines of code and explain the error in your own words. Then rewrite the lines of code to run error free:\n",
     "\n",
     "```python\n",
-    "dict = ['key': 8, 'pair': 9]\n",
-    "dict['key']\n",
+    "d = ['key': 8, 'pair': 9]\n",
+    "d['key']\n",
     "```\n",
     "\n",
     "Q04.88 Run the following lines of code and explain the error in your own words. Then rewrite the lines of code to run error free:\n",
@@ -344,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
