working on warnings for mkdocs material website, not working yet

--- a/src/05-NumPy-and-Arrays/05-06-Array-Indexing.ipynb
+++ b/src/05-NumPy-and-Arrays/05-06-Array-Indexing.ipynb
@@ -52,7 +52,7 @@
    },
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
-    "    <b>Remember! counting in Python starts at <code>0</code> and ends at <code>n-1</code>.</b>\n",
+    "Remember! Counting in Python starts at 0 and ends at n-1\n",
     "</div>"
    ]
   },
