typo edit took out note: in 04-04 strings, notes don't need note: to start them in markdown cells

--- a/src/04-Data-Types-and-Variables/04-04-Strings.ipynb
+++ b/src/04-Data-Types-and-Variables/04-04-Strings.ipynb
@@ -23,7 +23,7 @@
    },
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
-    "Note: Python strings can contain blank spaces. A blank space is a valid character in Python string.\n",
+    "Python strings can contain blank spaces. A blank space is a valid character in a Python string.\n",
     "</div>"
    ]
   },
