add 05-07 Array Slicing to src and mkdocs.yml, still need to edit 05-07 Array Slicing

--- a/src/05-NumPy-and-Arrays/05-06-Array-Indexing.ipynb
+++ b/src/05-NumPy-and-Arrays/05-06-Array-Indexing.ipynb
@@ -149,7 +149,7 @@
     "<value> = <array>[row,col]\n",
     "```\n",
     "\n",
-    "Where ```<value>``` is the value pulled out of the 2-D array and ```[row,col]``` specifies the row and column index of the value. Remember Python counting starts at ```0```, so the first row is row zero and the first column is column zero.\n",
+    "Where ```<value>``` is the value pulled out of the 2-D array and ```[row,col]``` specifies the row and column index of the value. Remember Python counting starts at zero, so the first row is row zero and the first column is column zero.\n",
     "\n",
     "We can access the value ```8``` in the array above by calling the row and column index ```[1,2]```.  This corresponds to the 2nd row (remember row 0 is the first row) and the 3rd column (column 0 is the first column)."
    ]
@@ -199,7 +199,7 @@
     "\n",
     "Where ```<value>``` is the new value going into the array and ```[index]``` is the location the new value will occupy. \n",
     "\n",
-    "The code below puts the value ```10``` into the second index or location of the array ```a```."
+    "The code below puts the value ```10``` into the second index or location of array ```a```."
    ]
   },
   {
