--- a/src/10-Symbolic-Math/10-04-Expressions-and-Substitutions.ipynb
+++ b/src/10-Symbolic-Math/10-04-Expressions-and-Substitutions.ipynb
@@ -8,6 +8,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IPython console for SymPy 1.6.1 (Python 3.8.3-64-bit) (ground types: python)\n",
+      "\n",
+      "These commands were executed:\n",
+      ">>> from __future__ import division\n",
+      ">>> from sympy import *\n",
+      ">>> x, y, z, t = symbols('x y z t')\n",
+      ">>> k, m, n = symbols('k m n', integer=True)\n",
+      ">>> f, g, h = symbols('f g h', cls=Function)\n",
+      ">>> init_printing()\n",
+      "\n",
+      "Documentation can be found at https://docs.sympy.org/1.6.1/\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sympy import init_session\n",
+    "init_session(pretty_print=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -32,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,6 +100,7 @@
     "The resulting expression is:\n",
     "\n",
     "$$ 2(2) + y $$\n",
+    "\n",
     "$$ 4 + y $$\n",
     "\n",
     "We can code the substitution above using SymPy's ```.subs()``` method as shown below."
@@ -78,19 +108,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/latex": [
-       "$\\displaystyle y + 4$"
-      ],
       "text/plain": [
        "y + 4"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,19 +135,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/latex": [
-       "$\\displaystyle 2 x + y$"
-      ],
       "text/plain": [
        "2*x + y"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,19 +162,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/latex": [
-       "$\\displaystyle y + 4$"
-      ],
       "text/plain": [
        "y + 4"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,19 +191,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/latex": [
-       "$\\displaystyle y + 2 z$"
-      ],
       "text/plain": [
        "y + 2*z"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,19 +235,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/latex": [
-       "$\\displaystyle 2 x^{2} + 2 x + \\frac{1}{z^{3}}$"
-      ],
       "text/plain": [
        "2*x**2 + 2*x + z**(-3)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,19 +297,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/latex": [
-       "$\\displaystyle 1.04759678564474 \\cdot 10^{-6}$"
-      ],
       "text/plain": [
        "1.04759678564474e-6"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,19 +324,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/latex": [
-       "$\\displaystyle 1.04759678564474 \\cdot 10^{-6}$"
-      ],
       "text/plain": [
        "1.04759678564474e-6"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,19 +352,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/latex": [
-       "$\\displaystyle 1.048 \\cdot 10^{-6}$"
-      ],
       "text/plain": [
        "1.048e-6"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
