add begin comment environment in book38.tplx template and made 10-04 init_session cell a comment

--- a/src/10-Symbolic-Math/10-04-Expressions-and-Substitutions.ipynb
+++ b/src/10-Symbolic-Math/10-04-Expressions-and-Substitutions.ipynb
@@ -10,30 +10,23 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "latex": {
+     "environment": "comment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IPython console for SymPy 1.6.1 (Python 3.8.3-64-bit) (ground types: python)\n",
-      "\n",
-      "These commands were executed:\n",
-      ">>> from __future__ import division\n",
-      ">>> from sympy import *\n",
-      ">>> x, y, z, t = symbols('x y z t')\n",
-      ">>> k, m, n = symbols('k m n', integer=True)\n",
-      ">>> f, g, h = symbols('f g h', cls=Function)\n",
-      ">>> init_printing()\n",
-      "\n",
-      "Documentation can be found at https://docs.sympy.org/1.6.1/\n",
       "\n"
      ]
     }
    ],
    "source": [
     "from sympy import init_session\n",
-    "init_session(pretty_print=False)"
+    "init_session(pretty_print=False, quiet=True)"
    ]
   },
   {
@@ -392,6 +385,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Edit Metadata",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
