add 05-07 Array Slicing and 05-08 Array Operations

--- a/src/05-NumPy-and-Arrays/05-07-Array-Slicing.ipynb
+++ b/src/05-NumPy-and-Arrays/05-07-Array-Slicing.ipynb
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On either sides of the colon, a blank stands for \"default\". \n",
+    "On either side of the colon, a blank stands for \"default\". The default start is index 0, the default step is 1, and the default stop is the last index.\n",
     "\n",
     " * ```[:2]``` corresponds to ```[start=default:stop=2]``` \n",
     " * ```[1:]``` corresponds to ```[start=1:stop=default]```\n",
@@ -84,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next examples shows the default ```start``` value is the first value in the array."
+    "The next example shows the default ```start``` value is the first value in the array."
    ]
   },
   {
@@ -160,11 +160,11 @@
    "source": [
     "2D NumPy arrays can be sliced with the general form:\n",
     "\n",
-    "```Python\n",
+    "```python\n",
     "<slice> = <array>[start_row:end_row, start_col:end_col]\n",
     "```\n",
     "\n",
-    "The code section below creates a two row by four column array and indexes out the first two rows and the first three columns."
+    "The code section below creates a two-row by four-column array and indexes out the first two rows and the first three columns."
    ]
   },
   {
@@ -225,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Again, a blank represents defaults the first index or the last index. The colon operator all by itself also represents \"all\" (default start: default stop). "
+    "Again, a blank represents the defaults: the first index, count by 1, or the last index. The colon operator all by itself represents \"all\". "
    ]
   },
   {
