--- a/src/01-Orientation/01-00-Orientation.ipynb
+++ b/src/01-Orientation/01-00-Orientation.ipynb
@@ -16,7 +16,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "latex": {
+     "after_cell": "newpage"
+    }
+   },
    "source": [
     "By the end of this chapter, you will be able to:\n",
     "\n",
@@ -37,6 +41,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Edit Metadata",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
