typo edit in 05-09 Systems of Linear Equations

--- a/src/05-NumPy-and-Arrays/05-09-Systems-of-Linear-Equations.ipynb
+++ b/src/05-NumPy-and-Arrays/05-09-Systems-of-Linear-Equations.ipynb
@@ -71,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can plug the valuse of $x$, $y$ and $z$ back into one of the equations to check the answer. \n",
+    "We can plug the values of $x$, $y$, and $z$ back into one of the equations to check the answer. \n",
     "\n",
     "$x$ is the first entry of the array, $y$ is the second entry of the array, and $z$ is the third entry of the array.\n",
     "\n",
