fixed a few website formatting problems in ch 5 and ch 10

--- a/src/05-NumPy-and-Arrays/05-08-Array-Operations.ipynb
+++ b/src/05-NumPy-and-Arrays/05-08-Array-Operations.ipynb
@@ -27,21 +27,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3 4 5]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
     "a = np.array([1, 2, 3])\n",
     "b = a + 2\n",
-    "print(b)"
+    "b"
    ]
   },
   {
@@ -50,18 +42,21 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3 6 9]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([3, 6, 9])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "a = np.array([1, 2, 3])\n",
     "b = np.array([2, 4, 6])\n",
     "c = a + b\n",
-    "print(c)"
+    "c"
    ]
   },
   {
@@ -79,17 +74,20 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3 6 9]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([3, 6, 9])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "a = np.array([1,2,3])\n",
     "b = 3*a\n",
-    "print(b)"
+    "b"
    ]
   },
   {
@@ -98,17 +96,20 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 5. 10. 15.]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([ 5., 10., 15.])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "a = np.array([10,20,30])\n",
     "b = a/2\n",
-    "print(b)"
+    "b"
    ]
   },
   {
