--- a/src/10-Symbolic-Math/10-04-Expressions-and-Substitutions.ipynb
+++ b/src/10-Symbolic-Math/10-04-Expressions-and-Substitutions.ipynb
@@ -380,7 +380,7 @@
     "| --- | --- | --- |\n",
     "| ```symbols()``` | create symbolic math variables | ```x, y = symbols('x y')``` |\n",
     "| ```.subs()``` | substitute a value into a symbolic math expression | ```expr.subs(x,2)``` |\n",
-    "| ```.evalf()``` | evaluate a symbolic math expression as a floating point number | ```expr.evalf()``` |\n"
+    "| ```.evalf()``` | evaluate a symbolic math expression as a floating point number | ```expr.evalf(4)``` |\n"
    ]
   }
  ],
