--- a/src/10-Symbolic-Math/10-05-Equations.ipynb
+++ b/src/10-Symbolic-Math/10-05-Equations.ipynb
@@ -62,17 +62,11 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 2 y - z = 5$"
-      ],
-      "text/plain": [
-       "Eq(2*y - z, 5)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eq(2*y - z, 5)\n"
+     ]
     }
    ],
    "source": [
@@ -80,7 +74,7 @@
     "\n",
     "eq2 = Eq(2*y - x, 5)\n",
     "eq3 = eq2.subs(x,z)\n",
-    "eq3"
+    "print(eq3)"
    ]
   }
  ],
