--- a/src/10-Symbolic-Math/10-08-Summary.ipynb
+++ b/src/10-Symbolic-Math/10-08-Summary.ipynb
@@ -75,10 +75,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The SymPy functions and methods used in this chapter are summarized in the table below.\n",
+    "\n",
     "| SymPy Function | Description | Example |\n",
     "| --- | --- | --- |\n",
     "| ```symbols()``` | Define a symbolic math variable | ```x, y = symbols('x y')``` |\n",
     "| ```.subs()``` | Substitute a variable or value | ```expr.subs(x, 2)``` |\n",
+    "| ```.evalf()``` | evaluate a symbolic math expression as a floating point number | ```expr.evalf()``` |\n",
     "| ```Eq()``` | Define a SymPy equation | ```eq1 = Eq(4*x + 2)``` |\n",
     "| ```solve()``` | Solve a SymPy expression or equation | ```solve((eq1,eq2), (x, y))``` |\n"
    ]
