ran one cell in ch 5 NumPy Operations

--- a/src/05-NumPy-and-Arrays/05-08-Array-Operations.ipynb
+++ b/src/05-NumPy-and-Arrays/05-08-Array-Operations.ipynb
@@ -27,7 +27,18 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 4, 5])"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
